[gd_scene load_steps=3 format=3 uid="uid://dt2gfg7ng6fw8"]

[ext_resource type="Script" path="res://addons/cogito/cogito_main.gd" id="1_og8xv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ph56b"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="CogitoMainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_og8xv")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="General Settings" type="PanelContainer" parent="TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ph56b")

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/General Settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General Settings/HBoxContainer"]
layout_mode = 2

[node name="CheckBox_PrintLogs" type="CheckBox" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Print logs"

[node name="SaveSystem" type="PanelContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer"]
layout_mode = 2
text = "Save System"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player State Prefix:"
horizontal_alignment = 1

[node name="lineedit_player_state" type="LineEdit" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "COGITO_player_state_"
max_length = 20

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scene State Prefix:"
horizontal_alignment = 1

[node name="lineedit_scene_state" type="LineEdit" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "COGITO_scene_state_"
max_length = 20

[node name="SceneSettings" type="PanelContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings/VBoxContainer"]
layout_mode = 2
text = "Scene Management Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Transition fade duration:"
horizontal_alignment = 1

[node name="lineedit_fade_duration" type="LineEdit" parent="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ".5"
max_length = 4

[node name="About" type="PanelContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ph56b")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/About"]
layout_mode = 2

[node name="Btn_GitHub" type="Button" parent="TabContainer/About/VBoxContainer"]
layout_mode = 2
text = "GitHub Repo"

[node name="Btn_Documentation" type="Button" parent="TabContainer/About/VBoxContainer"]
layout_mode = 2
text = "Documentation"

[connection signal="toggled" from="TabContainer/General Settings/HBoxContainer/VBoxContainer/CheckBox_PrintLogs" to="." method="_on_check_box_print_logs_toggled"]
[connection signal="text_submitted" from="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer2/lineedit_player_state" to="." method="_on_lineedit_player_state_text_submitted"]
[connection signal="text_submitted" from="TabContainer/General Settings/HBoxContainer/VBoxContainer/SaveSystem/VBoxContainer/HBoxContainer/lineedit_scene_state" to="." method="_on_lineedit_scene_state_text_submitted"]
[connection signal="text_changed" from="TabContainer/General Settings/HBoxContainer/VBoxContainer/SceneSettings/VBoxContainer/HBoxContainer/lineedit_fade_duration" to="." method="_on_lineedit_fade_duration_text_changed"]
[connection signal="pressed" from="TabContainer/About/VBoxContainer/Btn_GitHub" to="." method="_on_btn_git_hub_pressed"]
[connection signal="pressed" from="TabContainer/About/VBoxContainer/Btn_Documentation" to="." method="_on_btn_documentation_pressed"]
